Make examples generic

--- a/src/ui-experiments/scroll-demo.html
+++ b/src/ui-experiments/scroll-demo.html
@@ -66,25 +66,28 @@ section {
 <div class="container">
     <nav id="target_nav" class="col-xs-12 col-sm-4 col-md-4">
         <ul class="nav list-group" data-spy="affix" data-offset-top="0">
-            <li class="nav list-group-item"><a href="#top"><b>Learn Side</b></a></li>          
-            <li class="nav list-group-item"><a href="#one">Require ACA cookie</a></li>
-            <li class="nav list-group-item"><a href="#two">Allow you in with the right ACA Cookie</a></li>
-            <li class="nav list-group-item"><a href="#three">Three</a></li>
-            <li class="nav list-group-item"><a href="#four">Four</a></li>
+            <li class="nav list-group-item"><a href="#top"><b>Playlist</b></a></li>          
+            <li class="nav list-group-item"><a href="#one">Workflow #1</a></li>
+            <li class="nav list-group-item"><a href="#two">Workflow #2</a></li>
+            <li class="nav list-group-item"><a href="#three">Workflow #3</a></li>
+            <li class="nav list-group-item"><a href="#four">Workflow #4</a></li>
         </ul>
     </nav>
     <section id="content" class="col-xs-12 col-sm-8 col-md-8 " data-spy="scroll" data-target="#target_nav" data-offset="20">
         <section><hr id="top"></section><br>
-        <section><h4 id="one">Require ACA cookie</h4><pre>workflow("Require ACA cookie", function(){
+        <section><h4 id="one">Workflow #1</h4><pre>workflow("Workflow #1", function(){
   assert(1)
 })</pre></section>
         <br><br>
-        <section><h4 id="two">Allow you in with the right ACA Cookie</h4><pre>workflow "Describe the workflow", ->  
-          assert(1)</pre>
-        </section>
-        <br><br>
-        <section><h4 id="three">Three</h4><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p></section>
-        <section><h4 id="four">Four</h4><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p></section>
+        <section><h4 id="two">Workflow #1</h4><pre>workflow("Workflow #2", function(){
+  assert(1)
+})</pre></section>
+        <section><h4 id="three">Workflow #1</h4><pre>workflow("Workflow #3", function(){
+  assert(1)
+})</pre></section>
+        <section><h4 id="four">Workflow #1</h4><pre>workflow("Workflow #4", function(){
+  assert(1)
+})</pre></section>
    </section>
 </div>
    
