--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
       
       <div class="greeting" id="greeting">
         <h1>Ohai!</h1>
-        <p class="lead">Let's get this party started!<br>Open a playlist from the File menu.</p>
+        <p class="lead">Let's get this party started!<br>Open a script from the File menu.</p>
       </div>
             
       <div id="main">
