Add cloud and mobile phone UI options.

--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,12 @@
      <input style="display:none;" id="fileDialog" type="file" accept=".js,.coffee,.md"/>
    </div><!-- /.container -->
 
+  <div class="navbar-default navbar-fixed-bottom">
+    <span id='cloud' class="glyphicon glyphicon-cloud status-enabled"></span> 
+    <span id='mobile' class="glyphicon glyphicon-phone status-enabled"></span> 
+    <span id="passes">0</span> / <span id="failures">0</span> / <span id="total">0</span>
+  </div>
+
 <script type="text/javascript" src="vendor/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="vendor/prism/prism.js" charset="utf-8"></script>
 <script type="text/javascript" src="vendor/bootstrap-3.1.1/js/bootstrap.min.js"></script>
